[workspace]
resolver = "2"

members = [
  "host/testsi",
  "guest/trolley",
  "guest/libcmt-sys",

  "types",

  # Examples
  "examples/echo-dapp",
  "examples/echo-test",
]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"


[workspace.dependencies]
testsi = { version = "0.1", path = "host/testsi" }

libcmt-sys = { version = "0.1", path = "guest/libcmt-sys" }
trolley = { version = "0.1", path = "guest/trolley" }

types = { version = "0.1", path = "types" }

cartesi-machine = { version = "2", git = "https://github.com/cartesi/dave", branch = "feature/bump-emulator-2-coutinho", features = ["build_uarch"] }
