[package]
name = "testsi"
edition.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
testsi-macros = { workspace = true }

alloy-sol-types = "0.4"
alloy-primitives = "0.4"

clap = { version = "4.4", feature = ["derive"] }
inventory = "0.3"
libtest-mimic = "0.6"
thiserror = "1.0"
