[package]
name = "trolley"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcmt-sys = { workspace = true }
types = { workspace = true }

alloy-primitives = { workspace = true }
